jac-tests/error_logs/operators/test_03_graph_ops.jac.log
✖ Error: error[E0004]: Unexpected token in expression: 
'>'
  --> 
/home/denis/Jaseci/jac-tests/operators/test_03_graph_ops
.jac:19:9
   17 |     
   18 |     # 3. Malformed typed connection
   19 |     n1 +> :Friend: n2; # Error: missing second 
+>
      |         ^
   20 |     
   21 |     # 4. Traversal Violation: `-->` on NonNode
✖ Error: error[E0002]: Missing ';'
  --> 
/home/denis/Jaseci/jac-tests/operators/test_03_graph_ops
.jac:19:18
   17 |     
   18 |     # 3. Malformed typed connection
   19 |     n1 +> :Friend: n2; # Error: missing second 
+>
      |                  ^
   20 |     
   21 |     # 4. Traversal Violation: `-->` on NonNode
✖ Error: error[E0004]: Unexpected token in expression: 
':'
  --> 
/home/denis/Jaseci/jac-tests/operators/test_03_graph_ops
.jac:19:18
   17 |     
   18 |     # 3. Malformed typed connection
   19 |     n1 +> :Friend: n2; # Error: missing second 
+>
      |                  ^
   20 |     
   21 |     # 4. Traversal Violation: `-->` on NonNode
✖ Error: error[E0002]: Missing ';'
  --> 
/home/denis/Jaseci/jac-tests/operators/test_03_graph_ops
.jac:19:20
   17 |     
   18 |     # 3. Malformed typed connection
   19 |     n1 +> :Friend: n2; # Error: missing second 
+>
      |                    ^^
   20 |     
   21 |     # 4. Traversal Violation: `-->` on NonNode
✖ Error: error[E2008]: Invalid target for context 
update: BinaryExpr
  --> 
/home/denis/Jaseci/jac-tests/operators/test_03_graph_ops
.jac:19:5
   17 |     
   18 |     # 3. Malformed typed connection
   19 |     n1 +> :Friend: n2; # Error: missing second 
+>
      |     ^^^^^^^^^^^^^
   20 |     
   21 |     # 4. Traversal Violation: `-->` on NonNode
